src/objects/Contact_Information_Channel_Business_Rev__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Partner_Business_Review__c</fullName>
        <label>Channel Partner Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipLabel>Contact Information Channel Business Rev</relationshipLabel>
        <relationshipName>Channel_Partner_Business_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Contact_Roles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Contact Roles</label>
        <referenceTo>Joint_Business_Plan_Contact_Role__c</referenceTo>
        <relationshipLabel>Contact Information Channel Business Rev</relationshipLabel>
        <relationshipName>Contact_Information_Channel_Business_Rev</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>TEXT(Channel_Partner_Contact_Roles__r.ABB_Perspective_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines_form_ContactRole__c</fullName>
        <label>Product Lines form ContactRole</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Channel_Partner_Contact_Roles__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Channel_Partner_Contact_Roles__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Channel_Partner_Contact_Roles__r.Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Channel_Partner_Contact_Roles__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <label>Contact Information Channel Business Rev</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Contact Information  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Information Channel Business Rev</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>